syntax = "proto3";

import "google/protobuf/empty.proto";

option java_package = "example";

service BookShelfService {
    rpc Create ( CreateBookShelfRequest ) returns ( BookShelf ) {}
    rpc FindAll ( google.protobuf.Empty ) returns ( BookShelfs ) {}
    rpc AddBook ( AddBookRequest ) returns ( BookShelf ) {}
    rpc Delete ( DeleteBookShelfRequest ) returns ( google.protobuf.Empty ) {}
}

message CreateBookShelfRequest {
    string title = 1;
    string description = 2;
}

message AddBookRequest {
    int64 id = 1;
    int64 bookId = 2;
}

message DeleteBookShelfRequest {
    int64 id = 1;
}

message BookShelf {
    int64 id = 1;
    string title = 2;
    string description = 3;
    repeated int64 bookId = 4;
}

message BookShelfs {
    repeated BookShelf bookShelfs = 1;
}